# conflict-resolution

./: .coveragerc  LICENSE  README.md  pyproject.toml
src/: monsteronomicon.py
tests/: adult-black-dragon.json  adult-black-dragon.txt  test_monsteronomicon.py
